--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -42,8 +42,7 @@
         <div class="col-12">
           <div class="cards" data-aos="fade-down" data-aos-duration="1000">
             <div class="row" *ngIf="grid">
-              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" routerLink="/course-details" *ngFor="let item of courses" data-aos="fade-down"
-                data-aos-duration="1000">
+              <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12" [routerLink]="['/course-details', item.id]" *ngFor="let item of courses" data-aos="fade-down" data-aos-duration="1000">
                 <card [img]="item.img" [logo]="item.logo" [name]="item.name" [title]="item.title" [price]="item.price"
                   [newPrice]="item.newPrice" [sub]="item.sub"></card>
                 </div>
