major changes as login and reg, hashing

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -4,7 +4,8 @@ section {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 170px 0;
+    padding: 150px 0;
+    // padding: 170px 0;
 
     .courses-searching {
       position: relative;
