--- a/src/app/pages/course-details/course-details.component.html
+++ b/src/app/pages/course-details/course-details.component.html
@@ -116,7 +116,7 @@
                 <mat-panel-description *ngFor="let item of courseVideo">
                   <div class="w-100">
                     <div class="row">
-                      <div class="d-flex justify-content-between align-items-center border-bottom p-2" style="cursor: pointer;" routerLink="/course-videos">
+                      <div class="d-flex justify-content-between align-items-center border-bottom p-2" style="cursor: pointer;" routerLink="/course-videos/{{course.id}}">
                         <div class="d-flex align-items-center gap-2 my-2">
                           <i class='bx bx-file-blank color fs-6'></i>
                           <div class="d-flex align-items-center gap-3">
