--- a/src/app/pages/course-videos/course-videos.component.html
+++ b/src/app/pages/course-videos/course-videos.component.html
@@ -6,10 +6,10 @@
         <div class="col-xl-8 col-lg-8 col-md-12 shadow" data-aos="fade-down" data-aos-duration="1000">
           <div class="video">
             <div class="header-video p-3">
-              <h1 class="fs-2 fw-bold color">Name Video</h1>
+              <h1 class="fs-2 fw-bold color">{{curr_video_name}}</h1>
             </div>
             <div class="body-video">
-              <video width="100%" height="100%" [src]="video" controls muted></video>
+              <video width="100%" height="100%" [src]="curr_video_url" controls muted></video>
             </div>
           </div>
         </div>
