--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-between align-items-center">
       <h4 class="color fw-bold">{{ "header.welcome" | translate }}</h4>
       <div class="d-flex gap-2 color">
-        <a class="color" routerLink="/profile">
+        <a class="color" routerLink="/profile" *ngIf="token">
           <i class="bx bxs-user fs-4"></i>
         </a>
         <a class="color" *ngIf="!btnLang" (click)="changeLanguage('ar')">
