--- a/src/app/pages/course-category/course-category.component.html
+++ b/src/app/pages/course-category/course-category.component.html
@@ -10,7 +10,7 @@
     </nav>
     <div class="content-page">
       <div class="row">
-        <div class="col-12">
+        <!-- <div class="col-12">
           <div class="tab-search" data-aos="fade-down" data-aos-duration="1000">
             <div class="icons-layout">
               <a [ngClass]="grid ? 'active' : ''" (click)="grid = true"><i class='bx bxs-grid-alt'></i></a>
@@ -37,7 +37,7 @@
               </form>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col-12">
           <div class="cards" data-aos="fade-down" data-aos-duration="1000">
             <div class="row" *ngIf="grid">
@@ -47,10 +47,10 @@
                   [newPrice]="item.newPrice" [sub]="item.sub"></card>
                 </div>
               </div>
-              <div class="grid" *ngIf="!grid">
+              <!-- <div class="grid" *ngIf="!grid">
                 <card-grid *ngFor="let item of courses" [img]="item.img" [logo]="item.logo" [name]="item.name" [title]="item.title" [price]="item.price"
                 [desc]="item.desc"  [newPrice]="item.newPrice" [sub]="item.sub"></card-grid>
-              </div>
+              </div> -->
           </div>
         </div>
       </div>
